# matrix

./: .gitignore
components/: Makefile  pyproject.toml  setup.cfg
components/src/content_negotiation/adapters/: constants.py  controllers.py  utils.py
components/src/content_negotiation/adapters/middlewares/: __init__.py  compression.py  content.py  language.py
components/src/content_negotiation/composites/: api.py
components/src/gevents_example/: main.py
components/src/oauth/adapters/api/: __init__.py  app.py  models.py  settings.py
components/src/oauth/adapters/api/controllers/: users.py
components/src/oauth/applications/: __init__.py  entities.py  interfacies.py  services.py
components/src/oauth/composites/: api.py
development/content_negotiation/: requests.http
development/oauth/: requests.http
