[metadata]
name = matrix
version = 0.0.1
description = description
author = author

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = ~=3.10.0

install_requires =
    falcon
    requests
    pyjwt

    pydantic
    pydantic-settings

    brotli

    Flake8-pyproject
    flake8
    isort
    toml
    yapf

[options.extras_require]
dev =
    Flake8-pyproject
    flake8
    isort
    pylint
    toml
    yapf
